fixes size on mobile for game page

--- a/components/HandballComponenets/GamePageComponents/gamesStyles.module.css
+++ b/components/HandballComponenets/GamePageComponents/gamesStyles.module.css
@@ -105,7 +105,7 @@
         height: 300px;
         display: grid;
         grid-auto-columns: 50fr 2fr 1fr 2fr 50fr;
-        grid-template-rows: 75px 125px 50px 50px;
+        grid-template-rows: 50px 150px 50px 50px;
         grid-template-areas:
             'team1 team1  vers  team2 team2'
             'logo1 score1 dash score2 logo2'
@@ -141,13 +141,13 @@
 
     .teamScores {
         text-align: center;;
-        font-size: 20px;
+        font-size: 60px;
         font-weight: bold;
         margin: auto;
     }
 
     .dash {
-        font-size: 30px;
+        font-size: 60px;
         grid-area: dash;
     }
 
